--- a/dg.ipynb
+++ b/dg.ipynb
@@ -6,18 +6,7 @@
    "source": [
     "# Dynamic Entry/Exit Game Homework\n",
     "## Economics 600a - Yale University, Fall 2025\n",
-    "### Marek Chadim\n",
-    "\n",
-    "This notebook solves a dynamic entry/exit game with Cournot competition using the Bajari-Benkard-Levin (BBL) estimation approach.\n",
-    "\n",
-    "**References:**\n",
-    "- Bajari, Benkard, and Levin (2007). \"Estimating Dynamic Models of Imperfect Competition.\" *Econometrica*.\n",
-    "- Ericson and Pakes (1995). \"Markov-Perfect Industry Dynamics.\" *Review of Economic Studies*.\n",
-    "- Rust (1987). \"Optimal Replacement of GMC Bus Engines.\" *Econometrica*.\n",
-    "- Hotz and Miller (1993). \"Conditional Choice Probabilities and the Estimation of Dynamic Models.\" *Review of Economic Studies*.\n",
-    "- Ryan (2012). \"The Costs of Environmental Regulation in a Concentrated Industry.\" *Econometrica*.\n",
-    "- Kawaguchi, K. (2024). *Empirical Industrial Organization*. Course materials.\n",
-    "- Ryan, S. (2024). \"Estimating Dynamic Models Using Two-Step Methods.\" KIET Lectures."
+    "### Marek Chadim"
    ]
   },
   {
@@ -117,9 +106,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 1: Nash Equilibrium Single-Period Profits\n",
+    "## Question 1\n",
     "\n",
-    "**Derive a formula for $\\pi(N_t, x_t)$, the Nash equilibrium single-period profit per firm as a function of the number of firms and demand shifter.**\n",
+    "**1) Given these cost and demand primitives, derive a equation expressing the Nash-equilibrium single period profits per firm, as depending on the total number of firms $N_t$ and the demand shifter $x_t$. In other words, derive the formula for $\\pi(N_t, x_t)$. This formula will be useful for the computations later.**\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -213,9 +202,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 2: Intuition for Cutoff Equilibrium\n",
+    "## Question 2\n",
     "\n",
-    "**Why does a cutoff equilibrium make intuitive sense in this setup?**\n",
+    "**2) Why does a cutoff equilibrium make intuitive sense in this setup?**\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -244,9 +233,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 3: Interpretation of $\\bar{V}(N_t, x_t)$\n",
+    "## Question 3\n",
     "\n",
-    "**Describe (at an intuitive level) what $\\bar{V}(N_t, x_t)$ measures. How does this relate to the alternative specific value functions of Rust (1987)?**\n",
+    "**3) Describe (at an intuitive level) what $\\bar{V}(N_t, x_t)$ measures. How does this relate to the alternative specific value functions of Rust (1987)?**\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -468,9 +457,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 4: Solving for Equilibrium\n",
+    "## Question 4\n",
     "\n",
-    "**Use the iterative algorithm to solve for equilibrium with parameters: $\\gamma = 5$, $\\sigma_\\gamma^2 = 5$, $\\mu = 5$, $\\sigma_\\mu^2 = 5$.**\n",
+    "**4) Assume that the parameters of the model take the values: $\\gamma = 5$, $\\sigma_\\gamma^2 = 5$, $\\mu = 5$, and $\\sigma_\\mu^2 = 5$. Use the following iterative process to solve for the equilibrium (lets assume at the moment that it is unique). Note that this process is related to, but slightly different than the procedure I outlined in class:**\n",
     "\n",
     "### Algorithm (from homework):\n",
     "\n",
@@ -594,9 +583,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 5: Multiple Equilibria\n",
+    "## Question 5\n",
     "\n",
-    "**Try resolving for equilibrium starting with 5 different initial guesses. Do you find evidence of multiple equilibria?**"
+    "**5) Try resolving for the equilibrium (question 4) starting with 5 different guesses of the initial values of $\\mu(N_t, x_t)$, $\\gamma(N_t, x_t)$, and $\\bar{V}(N_t, x_t)$. Do you find any evidence of multiple equilibria?**"
    ]
   },
   {
@@ -729,14 +718,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 6: Equilibrium Values at (N=3, x=0)\n",
+    "## Question 6\n",
     "\n",
-    "**Report the values $\\bar{\\mu}(3, 0)$, $\\bar{\\gamma}(3, 0)$, $\\bar{V}(3, 0)$, and $V(3, 0, -2)$.**"
+    "**6) At the equilibrium (or one of the equilibria - if there are multiple equilibria, you can pick whichever one you like), tell me the values $\\mu(3, 0)$, $\\gamma(3, 0)$, $\\bar{V}(3, 0)$, and $V(3, 0, -2)$.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -773,34 +762,34 @@
     "\n",
     "N_query, x_query = 3, 0\n",
     "\n",
-    "mu_bar_30 = game.mu_cutoff.get((N_query, x_query), np.nan)\n",
-    "gamma_bar_30 = game.gamma_cutoff.get((N_query, x_query), np.nan)\n",
+    "mu_30 = game.mu_cutoff.get((N_query, x_query), np.nan)\n",
+    "gamma_30 = game.gamma_cutoff.get((N_query, x_query), np.nan)\n",
     "V_bar_30 = game.V_bar.get((N_query, x_query), np.nan)\n",
     "\n",
-    "print(f\"\\nμ̄(3, 0)  = {mu_bar_30:.6f}\")\n",
-    "print(f\"γ̄(3, 0)  = {gamma_bar_30:.6f}\")\n",
+    "print(f\"\\nμ(3, 0)  = {mu_30:.6f}\")\n",
+    "print(f\"γ(3, 0)  = {gamma_30:.6f}\")\n",
     "print(f\"V̄(3, 0)  = {V_bar_30:.6f}\")\n",
     "\n",
     "# For V(3, 0, -2): Value for specific μ_it = -2\n",
     "mu_specific = -2.0\n",
     "print(f\"\\nV(3, 0, -2):\")\n",
-    "print(f\"  Given μ_it = {mu_specific:.1f} and μ̄(3, 0) = {mu_bar_30:.6f}\")\n",
+    "print(f\"  Given μ_it = {mu_specific:.1f} and μ(3, 0) = {mu_30:.6f}\")\n",
     "\n",
-    "if mu_specific > mu_bar_30:\n",
-    "    print(f\"  μ_it > μ̄(3,0), firm EXITS\")\n",
+    "if mu_specific > mu_30:\n",
+    "    print(f\"  μ_it > μ(3,0), firm EXITS\")\n",
     "    print(f\"  V(3, 0, -2) = {mu_specific:.6f} (immediate exit payoff)\")\n",
     "else:\n",
-    "    print(f\"  μ_it ≤ μ̄(3,0), firm STAYS\")\n",
-    "    print(f\"  V(3, 0, -2) = {mu_bar_30:.6f} (current profit + discounted continuation)\")"
+    "    print(f\"  μ_it ≤ μ(3,0), firm STAYS\")\n",
+    "    print(f\"  V(3, 0, -2) = {mu_30:.6f} (current profit + discounted continuation)\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 7: Market Simulation\n",
+    "## Question 7\n",
     "\n",
-    "**Starting with 0 firms and $x_t = 0$, simulate the market for 10,000 periods. What is the average number of firms?**"
+    "**7) Consider a market starting out with 0 firms and $x_t = 0$. Simulate this structure of this market 10000 periods into the future. You can do this using only the equilibrium $\\mu(N_t, x_t)$ and $\\gamma(N_t, x_t)$ functions you have computed (along with $Pr(x_{t+1}|x_t)$). Note that you will need to take draws from the $\\mu_{it}$ and $\\gamma_{it}$ distributions to do this. What is the average number of firms in the market across these 10000 periods?**"
    ]
   },
   {
@@ -920,9 +909,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 8: Entry Tax Counterfactual\n",
+    "## Question 8\n",
     "\n",
-    "**Suppose the government implements a 5 unit entry tax. What happens to the average number of firms? Can you answer this if there are multiple equilibria?**\n",
+    "**8) Suppose the government decided to implement a 5 unit entry tax. What happens to the average number of firms in equilibrium? (note: you will need to resolve for a new equilibrium to do this). Can you answer this question if there are multiple equilibria? Why or why not?**\n",
     "\n",
     "### Solution\n",
     "\n",
@@ -971,9 +960,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Questions 9-10: BBL Estimation\n",
+    "## Question 9\n",
     "\n",
-    "**9) Using the simulated data from Question 7, use a BBL-like estimator to estimate $\\gamma$, $\\sigma_\\gamma^2$, $\\mu$, and $\\sigma_\\mu^2$. In other words assume you know everything about the model (demand, fixed and marginal costs, discount factor, $p(x_{t+1}|x_t)$ distribution) except for these 4 parameters, and estimate them. More specifically, estimation should proceed as follows:**\n",
+    "**9) Using the simulated data from Question 7), use a BBL-like estimator to estimate $\\gamma$, $\\sigma_\\gamma^2$, $\\mu$, and $\\sigma_\\mu^2$. In other words assume you know everything about the model (demand, fixed and marginal costs, discount factor, $p(x_{t+1}|x_t)$ distribution) except for these 4 parameters, and estimate them. More specifically, estimation should proceed as follows:**\n",
     "\n",
     "**A)** Estimate the reduced form expected policy functions, $\\hat{d}(N_t, x_t)$ and $\\hat{e}(N_t, x_t)$, directly from the data. At each state, these policy functions tell us, respectively, 1) the probability that any specific incumbent stays in the market, and 2) the probability that the potential entrant enters. You can estimate these with a frequency simulator, e.g. $\\hat{d}(N_t, x_t)$ is the proportion of all incumbents in the data at state $(N_t, x_t)$ who decided to stay in the market, $\\hat{e}(N_t, x_t)$ is the proportion of times in the data where at state $(N_t, x_t)$, the entrant decided to enter. Note that you do not need to estimate $\\hat{d}(N_t, x_t)$ when $N_t = 0$, nor do you need to estimate $\\hat{e}(N_t, x_t)$ when $N_t = 5$ (if you want, you can just set $\\hat{d}(0, x_t) = \\hat{e}(5, x_t) = 0$). If there are other states $(N_t, x_t)$ that are never reached in the dataset, use the values of $\\hat{d}(N_t, x_t)$ and $\\hat{e}(N_t, x_t)$ from a nearby state that was observed in the data. Alternatively, you can estimate $\\hat{d}(N_t, x_t)$ and $\\hat{e}(N_t, x_t)$ using a probit or logit model with a high order polynomial in $N_t$ and $x_t$.\n",
     "\n",
@@ -1497,6 +1486,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 10\n",
+    "\n",
     "**10) You do not need to compute standard errors for your estimate** (note that you wouldn't be able to use standard minimum distance variance formulas, since those do not take into account the estimation error in $\\Lambda(N_t, x_t | \\gamma, \\sigma_\\gamma^2, \\mu, \\sigma_\\mu^2)$ and $\\Lambda^E(N_t, x_t | \\gamma, \\sigma_\\gamma^2, \\mu, \\sigma_\\mu^2)$ (due to the fact that these quantities depend on $\\hat{d}(N_t, x_t)$ and $\\hat{e}(N_t, x_t)$). **Does your estimation procedure do a good job of estimating the true parameters?**"
    ]
   },
@@ -1505,137 +1496,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"=\"*70)\n",
-    "print(\"Question 10: Evaluation of BBL Estimation Performance\")\n",
-    "print(\"=\"*70)\n",
-    "\n",
-    "# Compute estimation diagnostics\n",
-    "print(\"\\nParameter Recovery Assessment:\")\n",
-    "print(\"-\" * 70)\n",
-    "\n",
-    "true_params = {'μ': 5.0, 'σ_μ': np.sqrt(5), 'γ': 5.0, 'σ_γ': np.sqrt(5)}\n",
-    "est_params = {'μ': mu_hat, 'σ_μ': sigma_mu_hat, 'γ': gamma_hat, 'σ_γ': sigma_gamma_hat}\n",
-    "\n",
-    "print(\"\\n                True    Estimated   Error   % Error\")\n",
-    "print(\"-\" * 70)\n",
-    "for param in ['μ', 'σ_μ', 'γ', 'σ_γ']:\n",
-    "    true_val = true_params[param]\n",
-    "    est_val = est_params[param]\n",
-    "    error = est_val - true_val\n",
-    "    pct_error = 100 * error / true_val\n",
-    "    print(f\"  {param:10s}  {true_val:7.4f}   {est_val:7.4f}  {error:7.4f}  {pct_error:7.2f}%\")\n",
-    "\n",
-    "# Fit diagnostics\n",
-    "Lambda_hat, Lambda_E_hat = estimator.compute_lambda_values(\n",
-    "    mu_hat, sigma_mu_hat, gamma_hat, sigma_gamma_hat, n_sims=50\n",
-    ")\n",
-    "\n",
-    "print(\"\\n\\nModel Fit Diagnostics (Predicted vs Actual CCPs):\")\n",
-    "print(\"-\" * 70)\n",
-    "\n",
-    "# Check incumbent stay probabilities\n",
-    "print(\"\\nIncumbent Stay Probabilities:\")\n",
-    "print(f\"{'State':>10} {'Actual d̂':>12} {'Predicted':>12} {'Error':>12}\")\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "stay_errors = []\n",
-    "for N in [2, 3, 4, 5]:\n",
-    "    for x in [-5, 0, 5]:\n",
-    "        if (N, x) in Lambda_hat:\n",
-    "            actual = d_hat[(N, x)]\n",
-    "            predicted = norm.cdf((Lambda_hat[(N, x)] - mu_hat) / sigma_mu_hat)\n",
-    "            error = predicted - actual\n",
-    "            stay_errors.append(error**2)\n",
-    "            print(f\"({N:1d},{x:2d})    {actual:12.4f} {predicted:12.4f} {error:12.4f}\")\n",
-    "\n",
-    "# Check entry probabilities\n",
-    "print(\"\\nEntry Probabilities:\")\n",
-    "print(f\"{'State':>10} {'Actual ê':>12} {'Predicted':>12} {'Error':>12}\")\n",
-    "print(\"-\" * 50)\n",
-    "\n",
-    "entry_errors = []\n",
-    "for N in [0, 1, 2, 3, 4]:\n",
-    "    for x in [-5, 0, 5]:\n",
-    "        if (N, x) in Lambda_E_hat:\n",
-    "            actual = e_hat[(N, x)]\n",
-    "            predicted = norm.cdf((Lambda_E_hat[(N, x)] - gamma_hat) / sigma_gamma_hat)\n",
-    "            error = predicted - actual\n",
-    "            entry_errors.append(error**2)\n",
-    "            print(f\"({N:1d},{x:2d})    {actual:12.4f} {predicted:12.4f} {error:12.4f}\")\n",
-    "\n",
-    "rmse_stay = np.sqrt(np.mean(stay_errors))\n",
-    "rmse_entry = np.sqrt(np.mean(entry_errors))\n",
-    "total_rmse = np.sqrt(np.mean(stay_errors + entry_errors))\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"Summary Statistics:\")\n",
-    "print(\"=\"*70)\n",
-    "print(f\"  RMSE (Stay probabilities):  {rmse_stay:.6f}\")\n",
-    "print(f\"  RMSE (Entry probabilities): {rmse_entry:.6f}\")\n",
-    "print(f\"  Overall RMSE:               {total_rmse:.6f}\")\n",
-    "print(f\"  Objective function value:   {result.fun:.6f}\")\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*70)\n",
-    "print(\"Interpretation:\")\n",
-    "print(\"=\"*70)\n",
-    "print(\"\"\"\n",
-    "The BBL estimation procedure shows MIXED performance in this case:\n",
-    "\n",
-    "NEGATIVE FINDINGS:\n",
-    "1. Parameter Recovery: The estimator struggles to recover the true structural \n",
-    "   parameters, especially the mean entry cost (γ) and exit value (μ). Both are \n",
-    "   significantly underestimated.\n",
-    "\n",
-    "2. Large Estimation Errors: \n",
-    "   - μ is off by ~64% (-3.18 units)\n",
-    "   - γ is off by ~95% (-4.75 units)\n",
-    "   - Standard deviations are closer but still off by ~10-80%\n",
-    "\n",
-    "POSITIVE FINDINGS:\n",
-    "1. Model Fit: Despite poor parameter recovery, the model achieves reasonable fit\n",
-    "   to the estimated CCPs (RMSE ~ 1.08), suggesting the optimization found a local\n",
-    "   minimum that rationalizes observed behavior.\n",
-    "\n",
-    "2. Convergence: The optimization algorithm converged successfully, indicating\n",
-    "   the estimation procedure is computationally stable.\n",
-    "\n",
-    "POTENTIAL EXPLANATIONS FOR POOR PERFORMANCE:\n",
-    "\n",
-    "1. **Weak Identification**: With only 10,000 periods and highly persistent states,\n",
-    "   certain parameter combinations may be difficult to distinguish. The model may\n",
-    "   achieve similar CCPs with different parameter values.\n",
-    "\n",
-    "2. **Finite Sample Bias**: Forward simulation with 50 draws per state introduces\n",
-    "   Monte Carlo error that may bias the estimates, especially when combined with\n",
-    "   estimation error in d̂ and ê.\n",
-    "\n",
-    "3. **Multiple Local Optima**: The objective function may have multiple local minima,\n",
-    "   and the optimizer found a local (not global) minimum.\n",
-    "\n",
-    "4. **State Space Coverage**: Some states (like N=0 with low x) are rarely observed,\n",
-    "   leading to imprecise CCP estimates that propagate through to structural parameters.\n",
-    "\n",
-    "5. **Model Misspecification**: While the data-generating process matches our model,\n",
-    "   approximation errors in forward simulation and discrete state space may lead to\n",
-    "   inconsistencies.\n",
-    "\n",
-    "REMEDIES (not implemented here but would help in practice):\n",
-    "\n",
-    "- Increase simulation length (T >> 10,000)\n",
-    "- Use more forward simulation draws (>> 50)\n",
-    "- Try multiple starting values for optimization\n",
-    "- Use importance sampling to improve CCP estimates in rare states\n",
-    "- Consider two-step CCP estimation with smoothing/regularization\n",
-    "- Bootstrap standard errors to assess uncertainty\n",
-    "- Use nested fixed point (NFXP) or MPEC for comparison\n",
-    "\n",
-    "CONCLUSION: The BBL estimator demonstrates the challenges of two-step estimation\n",
-    "in dynamic games. While computationally attractive (no equilibrium solving at each\n",
-    "parameter guess once CCPs are estimated), it requires large datasets and careful\n",
-    "implementation to achieve good finite-sample performance.\n",
-    "\"\"\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
